<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:background="@drawable/card_solid"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/textView4"
        android:layout_marginTop="54dp"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accepted_here_text"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/textsize18"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:gravity="center"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_pay_text"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:textColor="#ffff"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo_number_text"
        android:id="@+id/my_mobile"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/textsize20"
        android:layout_below="@+id/qrcode"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo_name_text"
        android:id="@+id/my_name"
        android:textSize="@dimen/textsize12"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_below="@+id/my_mobile"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

    <ImageView
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:id="@+id/qrcode"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/company_name"
        android:layout_marginBottom="15dp"
        android:textSize="@dimen/textsize10"
        android:textColor="@color/black"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>