<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/fakelayout"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="@drawable/card_solid"
        android:orientation="vertical">

        <TextView

            android:layout_marginTop="150dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/textsize20"
            android:textStyle="bold"/>

        <View
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/textsize14"
            android:textStyle="bold"/>

    </LinearLayout>
        <TextView
        android:id="@+id/check_terms"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_conditions"
        android:layout_below="@id/fakelayout"
        android:textSize="@dimen/textsize14"
        android:textStyle="bold"
        android:gravity="center"/>
    <TextView
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/company_name"
        android:textSize="@dimen/textsize11"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>
</RelativeLayout>