<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="Invoice"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="46dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/card"
        android:orientation="vertical">


        <ImageView
            android:tint="@color/red"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:src="@drawable/order_failed" />

        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/order_fail_text"
            android:textColor="@color/red"
            android:textSize="@dimen/textsize15"/>

        <TextView
        android:id="@+id/orderid"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/round_shadow"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/demo_orderid_text" />

        <TextView
            android:id="@+id/date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/demo_date_text"/>
    </LinearLayout>
        <RelativeLayout
            android:id="@+id/recharge_layout"
            android:visibility="gone"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:id="@+id/type_name"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:text="@string/recharge_no_text"
                android:textSize="@dimen/textsize13" />

            <TextView
                android:id="@+id/paid_number"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:textSize="@dimen/textsize13"
                android:text="@string/demo_number_text" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/account_layout"
            android:visibility="gone"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:text="@string/account_number_hint"
                android:textSize="@dimen/textsize13" />

            <TextView
                android:id="@+id/paid_ac_number"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:textSize="@dimen/textsize13"
                android:text="@string/demo_number_text" />

        </RelativeLayout>
        <RelativeLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:text="@string/amount_paid_text"
                android:textSize="@dimen/textsize13" />

            <TextView
                android:id="@+id/paid_amount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:text="@string/amount_payable_text"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize13" />

        </RelativeLayout>
        <LinearLayout
            android:background="@drawable/card"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:text="Billed To"
                    android:textSize="13sp" />
            </RelativeLayout>
            <RelativeLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <TextView
                    android:textColor="@color/black"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:text="@string/name_text"
                    android:textSize="@dimen/textsize13" />

                <TextView
                    android:id="@+id/my_name"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:textSize="@dimen/textsize13"
                    android:text="@string/demo_name_text" />

            </RelativeLayout>
            <RelativeLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:textColor="@color/black"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:text="@string/mobile_no_text"
                    android:textSize="@dimen/textsize13" />

                <TextView
                    android:id="@+id/my_mobile"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:textSize="@dimen/textsize13"
                    android:text="@string/demo_number_text" />

            </RelativeLayout>

            <RelativeLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:textColor="@color/black"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:text="@string/email_id_text"
                    android:textSize="@dimen/textsize13" />

                <TextView
                    android:id="@+id/my_email"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:textSize="@dimen/textsize13"
                    android:text="@string/demo_email_text" />

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/done_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:text="@string/done_btn"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_text_size"
        style="?android:attr/borderlessButtonStyle"
        android:foreground="?attr/selectableItemBackground"/>

</RelativeLayout>